# CSV-Data-Processor

./: .gitignore  README.md  file_reader.py  main.py  pyproject.toml  services.py
aggregation/: base.py  factory.py  strategy.py
filter/: base.py  factory.py  strategy.py
tests/: conftest.py  test_integration.py  test_unit.py
