[tool.poetry]
name = "csv-handler"
version = "0.1.0"
description = ""
authors = ["northvenv <ulanovsega@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
tabulate = "^0.9.0"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
